# supernotes-to-obsidian

./: .gitignore  pyproject.toml
src/supernotes_to_obsidian/: __init__.py  config.py  main.py
